feat(release): merge dev into main for 4.0.0-rc.1 (#107)
* Feat/refactoring UI (#65)

* feat: add refactor ui v1

* feat: add agent.md && some feilds opt

* fix(build): fix build error and change design doc、translate comments to English、 prefix token cookie names  (#67)

* fix(build): fix build error

* fix(docs): change design doc

* docs(java): translate comments to English

* docs: translate comments to English

* fix(auth): prefix token cookie names

* fix read config bug (#71)

* fix(config): fix read config bug

* Polish initialization and upgrade wizard UI

* add codeowners (#74)

add codeowners

* 1. Unified camel case naming for front-end and back-end interfaces (#75)

* Feat/UI optimization (#76)

* feat(audit): improve operation audit list and export (#70)

- Restore and consolidate RDP operation audit query APIs.
- Rename operation audit API paths to camelCase.
- Reuse queryUserAllAudit for operation audit filters.
- Return operation audit filter options from one backend entry.
- Show operator name and UID in operation audit lists.
- Add route permission metadata for operation audit.
- Support plugin-based operation audit export formats.
- Support full and limited-row operation audit export.
- Add source IP to operation audit export output.
- Push operation audit export progress over WebSocket.
- Show export filter summary and conversion progress.
- Wire frontend export event handling into the audit page.
- Add operation audit export progress VO and stage enum.
- Add Console-side plugin ConfigService implementation.
- Add Console-side SessionService result reader support.
- Register SessionService and ConfigService during Console plugin loading.
- Extract reusable result-file reader and writer component.
- Reuse the result-file component in Sidecar result reading.
- Mark the Sidecar SessionService implementation as primary.
- Adjust result-file package names and module dependencies.
- Adapt file format converters to the shared result reader service.
- Re